--- a/reports/markdown report.Rmd
+++ b/reports/markdown report.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_knit$set(root.dir= normalizePath('..'))
 ```
 
-```{r ProjectTemplate}
+```{r ProjectTemplate, include=FALSE}
 library(ProjectTemplate)
 load.project()
 ```
