--- a/reports/critical-reflection.Rmd
+++ b/reports/critical-reflection.Rmd
@@ -17,7 +17,9 @@ The second cycle focuses on how the engagement varies between the weeks of the c
 Finally the third cycle focuses on engagement with the videos. This analysis was based again on runs 4-7. First off all it was found that there was a very steep decline in the last 5% of the videos. This was observed for all videos in all runs, so it means that participants stopped engaging with the videos when they had watched up to 95% of them. Moreover it was found that for some videos the dropout rate was much lower compered to others, and engagement was very stable up to 95% of the duration. A main reason for this difference was video duration. By analysis the relationship between engagement and duration it was found the the two have a strong negative correlation, meaning that in general the longer the video the lower the engagement. However there were some outliers in this pattern meaning that some shorter videos had higher dropout rate when compared with longer ones. This could be an indication that the content of these videos were of great interest among the participants. 
 
 ## Critical Reflection
-CRISP DM methodology was applied throughout the project. In general it was very useful as it created a framework for the analysis. Moreover it was very helpful because it acted as a guide for the steps that need to be followed in order to plan, organize and execute the analysis. One of the most helpful parts was the first step which had to do with the business understanding because that is how I was able to formulate some interesting questions in order to carry out further analysis.  
+CRISP DM methodology was applied throughout the project. In general it was very useful as it created a framework for the analysis. Moreover it was very helpful because it acted as a guide for the steps that need to be followed in order to plan, organize and execute the analysis. One of the most helpful parts was the first step which had to do with the business understanding because that is how I was able to formulate some interesting questions in order to carry out further analysis. However a limitation identified with this framework, is that sometimes it is difficult to understand the business and the problem, because the problem and the aim of the analysis is not clarified, so the analysis could focus on an area that the business is less interested in when compared to other areas. Moreover a second limitation is that the general background is not taken into account. For example, for this specific project, the problem with people not registering for the course, could be that there are other organisations that provide similar course, and people prefer those. Moreover people not completing the course could be due to increased working hours, that leave people with less time to engage with the course. However this more general understanding is not part of CRISP DM, so it could be the case that some factors that affect an organisation may be disregarded. Moving on to the other tools introduced in the course I found project template very useful because it helped me organised my code much better than I would have if I was not using this. Also the fact that the data could be accessed without loading each file in R was extremely useful. Moreover, ggplots were very handy, because they had more functionalities and more advanced plots could be produced. These plots were also quite appealing for creating a nicer report. 
+
+In order to apply all the above techniques and find out the focus area for my analysis, some assumptions were made about the data. The first assumption was that the business was interested on the engagement on the course and wanted to find out which factors may affect engagement and which section of the course were more popular and why. This was a major assumption because if the organisation was not interested in that then the analysis is not that useful. The assumption that a specific participant can only register once for the course is also made, because if a participant has registered more than once, then this participant may have completed the course once, but may have not completed it many other times. This could lead in having participants not completing the course even if this is not true. It is also possible that if this participant had decided to do the course more than once, their engagement behavior may be similar over the registartions and again this would lead to some inaccurate results. Moreover, another assumption about the data sets, was that they included all participants and were complete. This was a major assumption as well, because the certainty of some results were based on the fact that the analysis was performed in the whole population of participants and not just a sample of them. So if the data are incomplete and there are more participants that are not registered, this could probably make the findings of the analysis less accurate. One more assumption is that the details that some participants had provided, like the gender and age, were true. Because especially for these data, that were available only for a sample of the clients, if they were not correct then the results would be even less accurate. The final assumption made about the data, is that these are the only data that the company has collected about the courses. If this is not true and there are more data that could explain what affects engagement, there may be other causes that are the main factors for affecting engagement and make the results of the currect analysis less strong. 
 
 
 
