Corrected some grammar ans syntax errors

--- a/reports/markdown-report.Rmd
+++ b/reports/markdown-report.Rmd
@@ -532,13 +532,13 @@ Also what is quite interesting is that video 2.4 has the longest duration, but i
 
 \newpage
 ## Conclusions 
-For the analysis above three cycles of the CRISP DM methodology were used. The first one aimed to investigate whether the age and gender of the participants plays a role in their engagement in the course. What was found was that even though the number of males and females who participate in the course are quite similar, there is a difference in the gender of the participants that actually complete the course. It seems like more males tend to complete the course when compared to females. Moreover looking at the age range, it was found that one of the runs with the lowest participation had more participants that were in the age range of 46-55, 56-65 and >65, when compared to most successful runs, in which more younger people in the he 18-25 and 26-35 age ranges had participated. However when looking at the people who completed the course, it seems that in general the higher completion percentage was in people that belong in the 26-35 and 36-45 age ranges. From the two findings above what can be suggested to the course developers, if their aim is to achieve higher completion rates, would be to target more males and also people in the 26-45 age range. However when making decisions based on these conclusions, care should be taken since in general most participants had not registered their age or gender, so the analysis was made only on a sample of the participants and may not be very representative of the participants population. So what the course developers could do in order to get some more accurate conclusions, would be to make the age range and gender field compulsory for the participants. Moreover there are other fields like employment status and higher education limit, that the participants can fill, but again is not compulsory. Making these field compulsory on registration would give an even better idea of the target group of the course.   
+For the analysis above three cycles of the CRISP DM methodology were used. The first one aimed to investigate whether the age and gender of the participants plays a role in their engagement in the course. What was found was that even though the number of males and females who participate in the course are quite similar, there is a difference in the gender of the participants that actually complete the course. It seems like more males tend to complete the course when compared to females. Moreover looking at the age range, it was found that one of the runs with the lowest participation had more participants that were in the age range of 46-55, 56-65 and >65, when compared to most successful runs, in which more younger people in the 18-25 and 26-35 age ranges had participated. However when looking at the people who completed the course, it seems that in general the higher completion percentage was in people that belong in the 26-35 and 36-45 age ranges. From the two findings above what can be suggested to the course developers, if their aim is to achieve higher completion rates, would be to target more males and also people in the 26-45 age range. However when making decisions based on these conclusions, care should be taken since in general most participants had not registered their age or gender, so the analysis was made only on a sample of the participants and may not be very representative of the participants population. So what the course developers could do in order to get some more accurate conclusions, would be to make the age range and gender field compulsory for the participants. Moreover there are other fields like employment status and higher education limit, that the participants can fill, but again is not compulsory. Making these field compulsory on registration would give an even better idea of the target group of the course.   
 
 The second cycle, investigated participants engagement with the steps of the course. What was found was that in general there is a steeper decline in engagement during the first week, and then for the second and third week there is a stabilization. Moreover, in general people who engage with the steps seem to be finishing them. However it was found that there were some specific steps were people engage with them but do not finish them. These steps were identified to be the quizzes and the test. So it seems that participants do not enjoy that much these kind of activities. In addition, a very interesting founding was that, participants seem to engage more with shorter quizzes (that have less number of questions), rather than longer quizzes. So course developers could look to make these activities shorter, or replace them with other activities that participants seem to enjoy more. 
 
 The third cycle, looked at the video statistics for runs 4-7 and tried to investigate which videos are more popular and why. The main result of this analysis was that in general participants prefer shorter videos. Even though duration seemed to directly affect engagement, it was found that some videos which were quite long, had a better engagement than shorter videos. This was consistent in the four runs, so participants may be interested more in the content of these videos, and course developers could look to include more related material, and maybe replace some videos, that maybe short but do not have a big engagement. Moreover,if the videos have different people delivering them, that could be a reason why some longer videos may be more popular. Finally, combing the analysis of cycle 1, with that of cycle 3, there was an indication that younger people prefer shorter videos. However this was just an assumption, since the results from the first cycle were based on a sample of the population. It was also found that most participants do not engage with the last 5% of the videos, which could lead to participants missing important information, if these are mentioned towards the end of the video. So the course developers should try to include interesting and important information towards the begging or the middle of the videos. 
 
-To sum up, all three cycles showed some interesting results that can explain which factors affect engagement. Moreover, some suggestions for the course developers were proposed, in order to boost engagement in future runs, or just understand why some thing did not work as expected. 
+To sum up, all three cycles showed some interesting results that can explain which factors affect engagement. Moreover, some suggestions for the course developers were proposed, in order to boost engagement in future runs, or just understand why some things did not work as expected. 
 
 
 
